syntax = "proto3";

package meow;

option go_package = "github.com/AlyxPink/meower/api/proto;proto";

service MeowService {
  rpc CreateMeow(CreateMeowRequest) returns (CreateMeowResponse) {}
  rpc GetMeow(GetMeowRequest) returns (GetMeowResponse) {}
  rpc IndexMeow(IndexMeowRequest) returns (IndexMeowResponse) {}
}

message Meow {
  string id = 1;
  string name = 2;
  string created_at = 3;
}

message CreateMeowRequest {
  string name = 1;
}
message CreateMeowResponse {
  Meow meow = 1;
}

message GetMeowRequest {
  string id = 1;
}
message GetMeowResponse {
  Meow meow = 1;
}

message IndexMeowRequest {}
message IndexMeowResponse {
  repeated Meow meows = 1;
}
